html changes and CSS changes

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h1>Tic Tac Toe</h1>
         <div class="container">
             <div class="game">
-                <button class="box">X</button>
-                <button class="box">0</button>
+                <button class="box"></button>
+                <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
@@ -24,6 +24,7 @@
                 <button class="box"></button>
             </div>
         </div>
+        <button id="reset-btn">Reset Game</button>
     </main>
     <script src="app.js"></script>
 </body>
